Added git repo detail UI and functionality

--- a/app/src/main/res/layout/activity_git_main.xml
+++ b/app/src/main/res/layout/activity_git_main.xml
@@ -7,7 +7,7 @@
     tools:context=".GitMain">
 
     <TextView
-        android:id="@+id/tutorialHeader2"
+        android:id="@+id/gitHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorPrimary"
@@ -27,4 +27,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/git_commits"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gitHeader"
+        app:srcCompat="@drawable/gitcommits" />
+
+    <Button
+        android:id="@+id/btnOpenRepo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:drawableEnd="@drawable/ic_baseline_link_24"
+        android:text="@string/open_git_repo"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
