--- a/app/src/main/res/layout-land/activity_git_main.xml
+++ b/app/src/main/res/layout-land/activity_git_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizMain">
+    tools:context=".GitMain">
 
     <TextView
-        android:id="@+id/quizHeader"
+        android:id="@+id/gitHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorPrimary"
@@ -16,28 +16,39 @@
         android:paddingTop="20sp"
         android:paddingEnd="20sp"
         android:paddingBottom="20sp"
-        android:text="@string/quizHeader"
+        android:text="@string/github_header"
         android:textAlignment="center"
         android:textColor="@color/dark_grey"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:drawableEndCompat="@drawable/ic_outline_school_24"
+        app:drawableEndCompat="@drawable/ic_icons8_github"
         app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
 
-    <TextView
-        android:id="@+id/sectionText"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="301dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="39dp"
+        android:contentDescription="@string/git_commits"
+        app:layout_constraintEnd_toStartOf="@+id/btnOpenRepo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gitHeader"
+        app:srcCompat="@drawable/gitcommits" />
+
+    <Button
+        android:id="@+id/btnOpenRepo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:text="Section 1 - Identify Letter"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/quizHeader"
-        app:layout_constraintStart_toStartOf="@+id/quizHeader"
-        app:layout_constraintTop_toBottomOf="@+id/quizHeader" />
+        android:layout_marginEnd="65dp"
+        android:drawableEnd="@drawable/ic_baseline_link_24"
+        android:text="@string/open_git_repo"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
