--- a/app/src/main/res/layout-land/activity_quiz_main.xml
+++ b/app/src/main/res/layout-land/activity_quiz_main.xml
@@ -32,20 +32,20 @@
         android:id="@+id/sectionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
         android:text="@string/sectionHeader1"
         android:textColor="?attr/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/quizHeader"
-        app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="@+id/quizHeader"
-        app:layout_constraintTop_toBottomOf="@+id/quizHeader" />
+        app:layout_constraintBottom_toBottomOf="@+id/currQuestionStatement"
+        app:layout_constraintStart_toStartOf="@+id/quizImage"
+        app:layout_constraintTop_toTopOf="@+id/currQuestionStatement" />
 
     <TextView
         android:id="@+id/questionCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="right|end"
         android:text="1/10"
@@ -53,46 +53,46 @@
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sectionText" />
+        app:layout_constraintTop_toBottomOf="@+id/quizHeader" />
 
     <ImageView
         android:id="@+id/quizImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="300dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
+        android:cropToPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sectionText"
+        app:layout_constraintTop_toTopOf="@+id/sectionText"
         app:srcCompat="@drawable/emission1quiz" />
 
     <TextView
         android:id="@+id/currQuestionStatement"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="5dp"
         android:text="TextView"
         android:textColor="?attr/colorPrimary"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quizImage" />
+        app:layout_constraintBottom_toBottomOf="@+id/questionCount"
+        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
+        app:layout_constraintStart_toStartOf="@+id/radioGroup"
+        app:layout_constraintTop_toTopOf="@+id/questionCount"
+        tools:text="@tools:sample/full_names" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currQuestionStatement">
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/quizImage"
+        app:layout_constraintEnd_toStartOf="@+id/nextQuizBtn"
+        app:layout_constraintStart_toEndOf="@+id/quizImage"
+        app:layout_constraintTop_toTopOf="@+id/quizImage">
 
         <RadioButton
             android:id="@+id/option1"
@@ -149,6 +149,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="Next"
+        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintStart_toEndOf="@+id/radioGroup"
+        app:layout_constraintTop_toTopOf="@+id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
