Added score page

--- a/app/src/main/res/layout/activity_quiz_main.xml
+++ b/app/src/main/res/layout/activity_quiz_main.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/quizHeader"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorPrimary"
         android:gravity="center_horizontal"
@@ -23,7 +23,6 @@
         android:textStyle="bold"
         app:drawableEndCompat="@drawable/ic_outline_school_24"
         app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
@@ -32,39 +31,33 @@
         android:id="@+id/sectionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:text="@string/sectionHeader1"
         android:textColor="?attr/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/quizHeader"
-        app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="@+id/quizHeader"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quizHeader" />
 
     <TextView
         android:id="@+id/questionCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="64dp"
         android:gravity="right|end"
         android:text="1/10"
         android:textColor="?attr/colorPrimary"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/sectionText"
         app:layout_constraintTop_toTopOf="@+id/sectionText" />
 
     <ImageView
         android:id="@+id/quizImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sectionText"
         app:srcCompat="@drawable/emission1quiz" />
@@ -73,8 +66,7 @@
         android:id="@+id/currQuestionStatement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="10dp"
         android:text="TextView"
         android:textColor="?attr/colorPrimary"
         android:textSize="18sp"
@@ -87,10 +79,8 @@
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currQuestionStatement">
 
@@ -147,7 +137,7 @@
         android:id="@+id/nextQuizBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
