--- a/app/src/main/res/layout-land/activity_quiz_main.xml
+++ b/app/src/main/res/layout-land/activity_quiz_main.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/quizHeader"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorPrimary"
         android:gravity="center_horizontal"
@@ -23,7 +23,6 @@
         android:textStyle="bold"
         app:drawableEndCompat="@drawable/ic_outline_school_24"
         app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
@@ -32,42 +31,36 @@
         android:id="@+id/sectionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="10dp"
         android:text="@string/sectionHeader1"
         android:textColor="?attr/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/currQuestionStatement"
-        app:layout_constraintStart_toStartOf="@+id/quizImage"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/currQuestionStatement" />
 
     <TextView
         android:id="@+id/questionCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="11dp"
         android:gravity="right|end"
         android:text="1/10"
         android:textColor="?attr/colorPrimary"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/currQuestionStatement"
         app:layout_constraintTop_toBottomOf="@+id/quizHeader" />
 
     <ImageView
         android:id="@+id/quizImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="50dp"
-        android:cropToPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        android:layout_width="344dp"
+        android:layout_height="253dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sectionText"
+        app:layout_constraintTop_toBottomOf="@+id/sectionText"
         app:srcCompat="@drawable/emission1quiz" />
 
     <TextView
@@ -81,14 +74,13 @@
         app:layout_constraintBottom_toBottomOf="@+id/questionCount"
         app:layout_constraintEnd_toEndOf="@+id/radioGroup"
         app:layout_constraintStart_toStartOf="@+id/radioGroup"
-        app:layout_constraintTop_toTopOf="@+id/questionCount"
-        tools:text="@tools:sample/full_names" />
+        app:layout_constraintTop_toTopOf="@+id/questionCount" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="0dp"
+        android:layout_width="247dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/quizImage"
         app:layout_constraintEnd_toStartOf="@+id/nextQuizBtn"
         app:layout_constraintStart_toEndOf="@+id/quizImage"
@@ -147,10 +139,9 @@
         android:id="@+id/nextQuizBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
         app:layout_constraintTop_toTopOf="@+id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
