--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="orange">#f39c12</color>
     <color name="grey">#2c3e50</color>
     <color name="dark_grey">#3d3d3d</color>
+    <color name="green">#90EE90</color>
+    <color name="red">#FF7F7F</color>
 </resources>
